crates/vize_maestro/src/virtual_code/snapshots/vize_maestro__virtual_code__template_code__tests__template_code_generator.snap
---
source: crates/vize_maestro/src/virtual_code/template_code_tests.rs
expression: doc.content.as_str()
---
// Virtual TypeScript for template type checking
// Generated by vize_maestro

declare const __VIZE_ctx: {
  // Context bindings from <script setup>
  [key: string]: any;
};

// Template expressions
const __VIZE_0 = __VIZE_ctx.message;
